[gd_scene load_steps=5 format=2]

[ext_resource path="res://hud.gd" type="Script" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/Tiles/diamond.png" type="Texture" id=3]
[ext_resource path="res://assets/Tiles/heart.png" type="Texture" id=4]

[node name="Hud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="PlayerLabel" type="Label" parent="."]
margin_left = 414.0
margin_top = 255.0
margin_right = 484.0
margin_bottom = 271.0
text = "bla"
align = 2
valign = 1

[node name="Diamond" type="Sprite" parent="."]
position = Vector2( 9, 261 )
texture = ExtResource( 3 )

[node name="DiamondLabel" type="Label" parent="."]
margin_left = 20.0
margin_top = 255.0
margin_right = 60.0
margin_bottom = 271.0
text = "000"

[node name="Heart" type="Sprite" parent="."]
position = Vector2( 9, 9 )
texture = ExtResource( 4 )

[node name="BastienLabel" type="Label" parent="."]
margin_left = 19.0
margin_top = 2.0
margin_right = 59.0
margin_bottom = 18.0
text = "B 0"

[node name="Heart2" type="Sprite" parent="."]
position = Vector2( 63, 9 )
texture = ExtResource( 4 )

[node name="LucilleLabel" type="Label" parent="."]
margin_left = 73.0
margin_top = 2.0
margin_right = 113.0
margin_bottom = 18.0
text = "L 0"

[node name="Heart3" type="Sprite" parent="."]
position = Vector2( 117, 9 )
texture = ExtResource( 4 )

[node name="AdelineLabel" type="Label" parent="."]
margin_left = 128.0
margin_top = 2.0
margin_right = 168.0
margin_bottom = 18.0
text = "A 0"
